--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "Yi-zhi",
-    "description": "junx5460",
+    "name": "IF-XTW",
+    "description": "IF-XTW",
     "keywords": ["vmess vless trojan shadowsocks socks"],
     "env": {
         "AA": {
